<resources>
    <string name="app_name">BeaconsRanging</string>

    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="type_major_value">Type major</string>
    <string name="type_minor_value">Type minor</string>

    <string name="entry_beacon">Entry</string>
    <string name="advertising_beacon">ADS</string>

    <string name="enter">Enter</string>
    <string name="exit">Exit</string>

    <string name="visible">Notify</string>
    <string name="invisible">Invisible</string>

    <string name="no_logs_for_this_date">No logs for this date</string>

    <string name="no_search_results">No search results</string>
    <string name="type_correct_major_minor">Please type correct major and minor</string>

    <string name="search_info_about_beacon">Search info about beacon</string>
    <string name="search_info_about_store">Search info about store</string>

    <string name="press_again_to_exit">Press again to exit</string>
    <string name="date_cant_be_future">Date can not be a future</string>

    <string name="no_visible_devices">No visible devices</string>

    <string name="enable_transmitting">Enable</string>
    <string name="disable_transmitting">Disable</string>

    <string name="placeholder_beacons_full_info_list">
        Beacon #%1$d\n
        UUID %2$s\n
        Major %3$s\n
        Minor %4$s\n
        serviceUUID %5$d\n
        RSSI %6$d\n
        Type Code %7$d\n
        Manufacturer %8$d\n
        TX Power %9$d\n
        Distance %10$s\n
        Bluetooth Name %11$s\n
        MAC %12$s
    </string>

    <string name="placeholder_beacons_info_list">
        UUID %1$s\n
        Major %2$d\n
        Minor %3$d\n
        RSSI %4$d\n
        Power %5$d
    </string>

    <string name="placeholder_beacon_search_info" formatted="false">
        ID: %1$d\n
        Major: %2$d\n
        Minor: %3$d\n
        Search time %4$d msec
    </string>

    <string name="placeholder_store_search_info" formatted="false">
        Store ID: %1$d\n
        Store: %2$s\n
        Mall ID: %3$d\n
        Mall: %4$s\n
        Floor: %5$d\n
        Search time %6$d msec
    </string>


    <string name="placeholder_store_log_info">
        %1$s %2$s\n
        Store: %3$s\n
        Mall: %4$s\n
        Floor: %5$d\n
        Address: %6$s\n
        %7$s
    </string>

    <string name="placeholder_advertising_log_info">
        %1$s\n
        UUID: %2$s\n
        Major: %3$d\n
        Minor: %4$d\n
        Message: %5$s\n
        %6$s
    </string>

    <string name="placeholder_beacon_zone_log_info" formatted="false">
        %1$s %2$s\n
        UUID: %3$s\n
        Major: %4$d\n
        Minor: %5$d
    </string>


    // tabs
    <string name="tab_beacons_list">Beacons</string>
    <string name="tab_entry_exit_stores">Stores</string>
    <string name="tab_push_messages">ADS</string>
    <string name="tab_entry_exit_beacons">Beacon zones</string>
    <string name="tab_emulation">Emulation</string>
    <string name="tab_search">Search</string>

</resources>
